--- a/Quantitative_vs_Categorical_Varibles.ipynb
+++ b/Quantitative_vs_Categorical_Varibles.ipynb
@@ -139,7 +139,8 @@
         "\n",
         "# Create a Boxplot of Fare by Survival Status\n",
         "plt.figure(figsize=(10, 12))\n",
-        "sns.boxplot(data=titanic, x='Survived', y='Fare', palette=\"coolwarm\")\n",
+        "sns.boxplot(data=titanic, hue='Survived', y='Fare', hue=\"coolwarm\")\n",
+        
         "plt.title(\"Fare Distribution by Survival Status\", fontsize=14)\n",
         "plt.xlabel(\"Survived (0 = No, 1 = Yes)\", fontsize=12)\n",
         "plt.ylabel(\"Fare\", fontsize=12)\n",
