--- a/Quantitative_vs_Categorical_Varibles.ipynb
+++ b/Quantitative_vs_Categorical_Varibles.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5MYOvddaxgHEynuEPGuSu",
+      "authorship_tag": "ABX9TyM0zhw82A1AQvPC66JRf7Dd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,8 +139,7 @@
         "\n",
         "# Create a Boxplot of Fare by Survival Status\n",
         "plt.figure(figsize=(10, 12))\n",
-        "sns.boxplot(data=titanic, hue='Survived', y='Fare', hue=\"coolwarm\")\n",
-        
+        "sns.boxplot(data=titanic, x='Survived', y='Fare', hue='Survived', legend=False, palette=\"coolwarm\")\n",
         "plt.title(\"Fare Distribution by Survival Status\", fontsize=14)\n",
         "plt.xlabel(\"Survived (0 = No, 1 = Yes)\", fontsize=12)\n",
         "plt.ylabel(\"Fare\", fontsize=12)\n",
@@ -152,9 +151,9 @@
           "height": 1000
         },
         "id": "lhWH8RUM0m4e",
-        "outputId": "0788a2f9-cf09-4924-d63c-49d4dcc167ea"
+        "outputId": "c6ddd828-9052-4ab0-9ebf-c911168994b5"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,17 +161,6 @@
           "text": [
             "Difference in Mean Fare (Survived - Died): 26.28\n",
             "Difference in Median Fare (Survived - Died): 15.50\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-14-e3639c62594c>:19: FutureWarning: \n",
-            "\n",
-            "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
-            "\n",
-            "  sns.boxplot(data=titanic, x='Survived', y='Fare', palette=\"coolwarm\")\n"
           ]
         },
         {
